--- a/angular.json
+++ b/angular.json
@@ -39,6 +39,7 @@
               }
             ],
             "styles": [
+              "node_modules/font-awesome/css/font-awesome.min.css",
               "src/styles.scss"
             ],
             "scripts": []
